--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "create-file",
   "displayName": "Create tempalte file for datagrand",
   "description": "generate files with templates in just a few steps",
-  "version": "0.0.3",
+  "version": "1.0.1",
   "publisher": "Lucaus",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LucausMartin/create-file.git"
+  },
   "engines": {
     "vscode": "^1.84.0"
   },
